# MySTL

./: .gitignore  CMakeLists.txt  README.md
brainstorm/: Graph.drawio  MySTL.xmind  include.md
src/: CMakeLists.txt  ManualTesting.cpp  array.h  main.cpp  type_traits.h
testing/: CMakeLists.txt  array_test.h  manualTest.cpp  stdheader.h  testheader.h  testing.cpp
